職務経歴書に直近フリーランス物流案件のマージを追加

--- a/index.html
+++ b/index.html
@@ -198,6 +198,50 @@
         </ul>
       </section>
 
+      <section id="logistics-zero-to-one">
+        <h2>5. 物流機能のゼロからの構築と業務DX推進（直近フリーランス活動）</h2>
+        <p>
+          直近フリーランスとして、下記の取引先企業に対して物流機能の設計・構築や仕組み化を実施しました。  
+          特に株式会社アークリード様では、アパレル工場の余剰在庫問題の解決と物流業務委託仕組みの導入により、  
+          毎月30万円の売上アップを達成しています。
+        </p>
+
+        <ul>
+          <li><strong>株式会社東京白ゆり会</strong><br>デザインを依頼し、そのデザイン商品を販売する会社。物流の設計や販売管理の支援を行いました。</li>
+          <li><strong>株式会社アークリード</strong><br>アパレル工場。余った在庫が滞留していた状況で、在庫処理や物流の業務委託仕組みを導入し、売上向上に貢献。</li>
+          <li><strong>株式会社宮入、株式会社ファッションメッセージ</strong><br>既存仕入先以外に独自で全国規模の新規仕入れルート（ローラー営業）を開拓し、原価率改善に寄与。</li>
+        </ul>
+
+        <h3>主な取り組み内容</h3>
+        <h4>1) 倉庫業務の効率化・自動化支援</h4>
+        <ul>
+          <li>手書きやExcel管理中心の属人化した出荷明細作成をフォーム入力→自動登録・在庫自動更新に置き換え。</li>
+          <li>Notion APIで在庫ダッシュボードを作成し、誰でもリアルタイムに在庫状況を把握可能に。</li>
+          <li>Pythonスクリプトで週次レポート作成を自動化、Slack連携による情報共有を迅速化。</li>
+          <li>出荷登録時間を約70％削減し、ミス削減・現場負荷軽減に成功。</li>
+        </ul>
+
+        <h4>2) 繊維工場向け物流業務委託支援</h4>
+        <ul>
+          <li>物流コスト高騰に伴い、工場の現場作業効率化と部分的な物流委託に向けた仕組みを構築。</li>
+          <li>GASで百貨店コードの自動生成を実装し、入力ミスを減少。</li>
+          <li>スプレッドシートからSATOプリンタ用値札データを自動生成し、ラベル印刷作業を効率化。</li>
+          <li>Notionで出荷・入荷情報共有、Pythonで週報PDFを自動作成し、情報伝達を改善。</li>
+          <li>LINE BOTによる店舗注文受付自動化も実施。</li>
+        </ul>
+
+        <h4>3) 生産管理・原価管理の可視化支援（Notion連携）</h4>
+        <ul>
+          <li>Excel管理の変更箇所をGASで検知・差分抽出し、Notionデータベースに自動反映。</li>
+          <li>Pythonで履歴保存・バージョン管理を実装し、原価や納期変更のトレースを可能に。</li>
+          <li>意思決定の迅速化と月次資料作成工数削減に貢献。</li>
+        </ul>
+
+        <p>
+          詳細は<a href="https://chabo452.github.io/logi-dx-skill-transfer/" target="_blank" rel="noopener noreferrer">こちらの資料</a>をご参照ください。
+        </p>
+      </section>
+
       <section id="results">
         <h2>主な成果</h2>
         <ul>
