--- a/index.html
+++ b/index.html
@@ -117,9 +117,61 @@
     header, footer{ page-break-inside:avoid }
   }
 
+  /* スマホ対応 */
   @media (max-width:700px){
+    /* header の2カラムを縦並びに */
+    header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .contact {
+      text-align: left;
+      margin-top: 12px;
+      min-width: unset;
+    }
+    /* .two-col は縦並び */
     .two-col{ flex-direction:column; }
-    .contact{ text-align:left; margin-top:10px; }
+  }
+
+  @media (max-width:480px){
+    body {
+      padding: 12px;
+    }
+    .sheet {
+      padding: 16px;
+    }
+    p, ul li {
+      font-size: 0.9rem;
+      line-height: 1.5;
+    }
+    /* ボタン群縦並びに */
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+    .button-group .btn {
+      margin-left: 0;
+      margin-bottom: 8px;
+      width: 100%;
+      max-width: 300px;
+    }
+  }
+
+  .btn {
+    background-color: #2a7ae2;
+    color: white;
+    padding: 8px 14px;
+    margin-left: 8px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 0.9rem;
+  }
+  .btn:hover {
+    background-color: #1e5bb8;
   }
 
 </style>
@@ -262,29 +314,12 @@
           <li><strong>少人数体制での再現力：</strong>実質2名体制で全社的な改善を実現した経験。</li>
         </ul>
       </section>
-<div class="button-group" style="text-align:right; margin-bottom:20px;">
-  <a href="職務経歴書.xlsx" download class="btn">Excelダウンロード</a>
-  <a href="職務経歴書.pptx" download class="btn">PowerPointダウンロード</a>
-  <button onclick="window.print()" class="btn">印刷</button>
-</div>
 
-<style>
-  .btn {
-    background-color: #2a7ae2;
-    color: white;
-    padding: 8px 14px;
-    margin-left: 8px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 0.9rem;
-  }
-  .btn:hover {
-    background-color: #1e5bb8;
-  }
-</style>
+      <div class="button-group" style="text-align:right; margin-bottom:20px;">
+        <a href="職務経歴書.xlsx" download class="btn">Excelダウンロード</a>
+        <a href="職務経歴書.pptx" download class="btn">PowerPointダウンロード</a>
+        <button onclick="window.print()" class="btn">印刷</button>
+      </div>
 
     </main>
 
